Change the behavior of fixed menus. Now those menus would be collapsed if a click event happens.

--- a/src/com/tsangle/sharesj/Style/site.css
+++ b/src/com/tsangle/sharesj/Style/site.css
@@ -1,18 +1,16 @@
-﻿.speedLabel{
+﻿.fixedContainer{
+    width: 100vw;
+    height: 100%;
+    position: fixed;
+    z-index: 500;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.speedLabel{
     width:inherit;
     text-align:right;
-}
-
-.navWidth{
-    width:100vw;
-}
-
-.navItemFont{
-
-}
-
-.modal{
-    width:100vw;
 }
 
 body {
@@ -20,6 +18,20 @@ body {
     padding-bottom: 1rem;
     width:100vw;
     overflow-x:hidden;
+}
+
+.mainNavbar{
+    width: 100vw;
+    pointer-events: auto;
+}
+
+.fixedMask{
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    position: fixed;
+    pointer-events: auto;
 }
 
 .alertHeader{
@@ -91,14 +103,6 @@ body {
     background-color: transparent;
 }
 
-.navbarCollapseMaskOpen{
-    overflow: hidden;
-}
-
-.myShadow{
-    box-shadow: 0 0.3rem 1.5rem rgba(0,0,0,.3)!important;
-}
-
 .floatingButton{
     position: fixed;
     z-index: 10;
@@ -115,75 +119,7 @@ body {
     position:fixed;
     z-index: 300;
     pointer-events: none;
-    top:0;
-    left: 50vw;
     height: 100%;
-    transform: translate(-50%, 0);
-}
-
-.floatingButtonIconExpand {
-    transform:rotate(135deg);
-}
-
-.creatingButton{
-    position: fixed;
-    z-index: 5;
-    pointer-events: auto;
-    top: calc(100% - 5.5rem);
-    left: calc(100% - 4.5rem);
-    border-radius:1.5rem;
-    width:2.8rem;
-    height:2.8rem;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.3)!important;
-    opacity: 0;
-    transition-property: transform, opacity;
-}
-
-.creatingButtonExpand {
-    transform:translate(-5rem,-0);
-    opacity: 1;
-}
-
-.uploadingButton{
-    position: fixed;
-    z-index: 5;
-    pointer-events: auto;
-    top: calc(100% - 5.5rem);
-    left: calc(100% - 4.5rem);
-    border-radius:1.5rem;
-    width:2.8rem;
-    height:2.8rem;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.3)!important;
-    opacity: 0;
-    transition-property: transform, opacity;
-}
-
-.uploadingButtonExpand {
-    transform:translate(-3.54rem,-3.54rem);
-    opacity: 1;
-}
-
-.settingButton{
-    position: fixed;
-    z-index: 5;
-    pointer-events: auto;
-    top: calc(100% - 5.5rem);
-    left: calc(100% - 4.5rem);
-    border-radius:1.5rem;
-    width:2.8rem;
-    height:2.8rem;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.3)!important;
-    opacity: 0;
-    transition-property: transform, opacity;
-}
-
-.settingButtonExpand {
-    transform:translate(-0,-5rem);
-    opacity: 1;
-}
-
-.floatingButtonTransitionDuration{
-    transition-duration: 0.3s;
 }
 
 .modal-open
